aron: data binding

--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,7 @@
       <h3>Basic formulario-element demo</h3>
       <demo-snippet>
         <template>
+          <!-- <formulario-element name="angel"></formulario-element> -->
           <formulario-element></formulario-element>
         </template>
       </demo-snippet>
